-------------------------------------------------
Gearswap 0.502 - require unmasked and documented.
-------------------------------------------------
Gearswap 0.501 - file_unload user function added.
-------------------------------------------------
Gearswap 0.5 - Initial beta release